<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Broadcom Corporation

   This program is the proprietary software of Broadcom Corporation and/or its
   licensors, and may only be used, duplicated, modified or distributed
   pursuant to the terms and conditions of a separate, written license
   agreement executed between you and Broadcom (an "Authorized License").
   Except as set forth in an Authorized License, Broadcom grants no license
   (express or implied), right to use, or waiver of any kind with respect to
   the Software, and Broadcom expressly reserves all rights in and to the
   Software and all intellectual property rights therein.
   IF YOU HAVE NO AUTHORIZED LICENSE, THEN YOU HAVE NO RIGHT TO USE THIS
   SOFTWARE IN ANY WAY, AND SHOULD IMMEDIATELY NOTIFY BROADCOM AND DISCONTINUE
   ALL USE OF THE SOFTWARE.

   Except as expressly set forth in the Authorized License,

   1.     This program, including its structure, sequence and organization,
          constitutes the valuable trade secrets of Broadcom, and you shall
          use all reasonable efforts to protect the confidentiality thereof,
          and to use this information only in connection with your use of
          Broadcom integrated circuit products.

   2.     TO THE MAXIMUM EXTENT PERMITTED BY LAW, THE SOFTWARE IS PROVIDED
          "AS IS" AND WITH ALL FAULTS AND BROADCOM MAKES NO PROMISES,
          REPRESENTATIONS OR WARRANTIES, EITHER EXPRESS, IMPLIED, STATUTORY,
          OR OTHERWISE, WITH RESPECT TO THE SOFTWARE.  BROADCOM SPECIFICALLY
          DISCLAIMS ANY AND ALL IMPLIED WARRANTIES OF TITLE, MERCHANTABILITY,
          NONINFRINGEMENT, FITNESS FOR A PARTICULAR PURPOSE, LACK OF VIRUSES,
          ACCURACY OR COMPLETENESS, QUIET ENJOYMENT, QUIET POSSESSION OR
          CORRESPONDENCE TO DESCRIPTION. YOU ASSUME THE ENTIRE RISK ARISING OUT
          OF USE OR PERFORMANCE OF THE SOFTWARE.

   3.     TO THE MAXIMUM EXTENT PERMITTED BY LAW, IN NO EVENT SHALL BROADCOM OR
          ITS LICENSORS BE LIABLE FOR
          (i)   CONSEQUENTIAL, INCIDENTAL, SPECIAL, INDIRECT, OR EXEMPLARY
                DAMAGES WHATSOEVER ARISING OUT OF OR IN ANY WAY RELATING TO
                YOUR USE OF OR INABILITY TO USE THE SOFTWARE EVEN IF BROADCOM
                HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES; OR
          (ii)  ANY AMOUNT IN EXCESS OF THE AMOUNT ACTUALLY PAID FOR THE
                SOFTWARE ITSELF OR U.S. $1, WHICHEVER IS GREATER. THESE
                LIMITATIONS SHALL APPLY NOTWITHSTANDING ANY FAILURE OF
                ESSENTIAL PURPOSE OF ANY LIMITED REMEDY.
-->
<resources>

    <string name="app_name">PbapclientTestApp</string>
    <string name="menu_settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="prefs">Prefs</string>

    <string name="status_connected">Connected to PBAP server %1$s</string>
    <string name="status_disconnected">Disconnected from PBAP server %1$s</string>
    <string name="status_connect_error">Error connecting to PBAP server %1$s</string>
    <string name="status_disconnect_error">Error disconnecting from PBAP server %1$s</string>

    <string name="auth_notif_ticker">Bluetooth Obex authentication request</string>
    <string name="auth_notif_title">Bluetooth authentication</string>
    <string name="auth_notif_message">Type session key for %1$s</string>
    <string name="auth_notif_message_with_username">Type username and session key for %1$s</string>
    
    <string name="pbap_session_key_dialog_header">Bluetooth session key required</string>
    <string name="pbap_session_key_dialog_title">Type session key for %1$s</string>
    <string name="pbap_session_key_dialog_title_with_username">Type username and session key for %1$s</string>
    <string name="pbap_auth_username">Username</string>
    <string name="pbap_auth_sessionkey">Session Key</string>

    <string name="pbap_authentication_timeout_message">There was time out to input session key with %1$s</string>

    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="remote_server">Server:</string>
    <string name="selectDevice">Select Device</string>
    <string name="connectToDevice">Connect</string>
    <string name="disconnectFromServer">Disconnect</string>
    <string name="getFolderPath">get folder path</string>
    <string name="pceFolderPath">FolderPath</string>

    <string name="titlePhotoDownload">Photo download config</string>
    <string name="configPhotoDownload">Enable/Disable photo download</string>
    <string name="vcard_version">vCard Version</string>
    <string name="configAddSdp">Configure Sdp</string>
    <string name="addSdp">Add SDP</string>

    <string name="clear_all_contacts">Clear all contacts</string>
    <string name="clear_all_calllogs">Clear all call logs</string>
    <string name="clear_all_outgoingcalls">Clear ougoing call logs</string>
    <string name="clear_all_incomingcalls">Clear incoming call logs</string>
    <string name="clear_all_missedcalls">Clear missed call logs</string>

    <string name="max_list_count_pb">maxListCount: -1</string>
    <string name="pull_pb_btn">pullPhonebook</string>
    <string name="import_to_phonebook">Import vcard to phonebook</string>
    <string name="import_to_calllogs">Import to calllog</string>

    <string name="max_list_count_listing">maxListCount: -1</string>
    <string name="abort_btn">Abort</string>
    <string name="setpath_btn">SetPath</string>

    <string name="listing_hint">search name...</string>


</resources>