<!--
   Copyright (C) 2012 Broadcom Corporation

   This program is the proprietary software of Broadcom Corporation and/or its
   licensors, and may only be used, duplicated, modified or distributed
   pursuant to the terms and conditions of a separate, written license
   agreement executed between you and Broadcom (an "Authorized License").
   Except as set forth in an Authorized License, Broadcom grants no license
   (express or implied), right to use, or waiver of any kind with respect to
   the Software, and Broadcom expressly reserves all rights in and to the
   Software and all intellectual property rights therein.
   IF YOU HAVE NO AUTHORIZED LICENSE, THEN YOU HAVE NO RIGHT TO USE THIS
   SOFTWARE IN ANY WAY, AND SHOULD IMMEDIATELY NOTIFY BROADCOM AND DISCONTINUE
   ALL USE OF THE SOFTWARE.

   Except as expressly set forth in the Authorized License,

   1.     This program, including its structure, sequence and organization,
          constitutes the valuable trade secrets of Broadcom, and you shall
          use all reasonable efforts to protect the confidentiality thereof,
          and to use this information only in connection with your use of
          Broadcom integrated circuit products.

   2.     TO THE MAXIMUM EXTENT PERMITTED BY LAW, THE SOFTWARE IS PROVIDED
          "AS IS" AND WITH ALL FAULTS AND BROADCOM MAKES NO PROMISES,
          REPRESENTATIONS OR WARRANTIES, EITHER EXPRESS, IMPLIED, STATUTORY,
          OR OTHERWISE, WITH RESPECT TO THE SOFTWARE.  BROADCOM SPECIFICALLY
          DISCLAIMS ANY AND ALL IMPLIED WARRANTIES OF TITLE, MERCHANTABILITY,
          NONINFRINGEMENT, FITNESS FOR A PARTICULAR PURPOSE, LACK OF VIRUSES,
          ACCURACY OR COMPLETENESS, QUIET ENJOYMENT, QUIET POSSESSION OR
          CORRESPONDENCE TO DESCRIPTION. YOU ASSUME THE ENTIRE RISK ARISING OUT
          OF USE OR PERFORMANCE OF THE SOFTWARE.

   3.     TO THE MAXIMUM EXTENT PERMITTED BY LAW, IN NO EVENT SHALL BROADCOM OR
          ITS LICENSORS BE LIABLE FOR
          (i)   CONSEQUENTIAL, INCIDENTAL, SPECIAL, INDIRECT, OR EXEMPLARY
                DAMAGES WHATSOEVER ARISING OUT OF OR IN ANY WAY RELATING TO
                YOUR USE OF OR INABILITY TO USE THE SOFTWARE EVEN IF BROADCOM
                HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES; OR
          (ii)  ANY AMOUNT IN EXCESS OF THE AMOUNT ACTUALLY PAID FOR THE
                SOFTWARE ITSELF OR U.S. $1, WHICHEVER IS GREATER. THESE
                LIMITATIONS SHALL APPLY NOTWITHSTANDING ANY FAILURE OF
                ESSENTIAL PURPOSE OF ANY LIMITED REMEDY.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PbapclientActivity" >

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remote_server"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btSelectedDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deviceName"
        android:text="@string/selectDevice" />

    <Button
        android:id="@+id/btConnectedToDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btSelectedDevice"
        android:text="@string/connectToDevice" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btConnectedToDevice" >

        <RelativeLayout
            android:id="@+id/relativeLayoutPullGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btConnectedToDevice" >

            <RelativeLayout
                android:id="@+id/relativeLayoutPullPB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/spinnerSetPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btConnectedToDevice" />

                <Button
                    android:id="@+id/buttonSetpath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinnerSetPath"
                    android:text="@string/setpath_btn" />

                <Spinner
                    android:id="@+id/spinnerPullPbPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buttonSetpath" />

                <TextView
                    android:id="@+id/textViewMaxListCountpb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinnerPullPbPath"
                    android:layout_marginLeft="25dp"
                    android:gravity="right"
                    android:text="@string/max_list_count_pb"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <SeekBar
                    android:id="@+id/seekBarMaxListCountpb"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewMaxListCountpb" />

                <Button
                    android:id="@+id/buttonPullPhonebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/seekBarMaxListCountpb"
                    android:layout_centerVertical="true"
                    android:text="@string/pull_pb_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutPullvCardListing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutPullPB" >

                <Spinner
                    android:id="@+id/spinnerBrowsePath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pull_pb_btn"
                    android:layout_marginTop="18dp" />

                <Spinner
                    android:id="@+id/spinnerSearchOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/spinnerBrowsePath"
                    android:layout_marginTop="18dp" />

                <Spinner
                    android:id="@+id/spinnerSearchAttribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/spinnerSearchOrder"
                    android:layout_marginTop="18dp" />

                <TextView
                    android:id="@+id/textViewMaxListCountListing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinnerSearchAttribute"
                    android:gravity="right"
                    android:text="@string/max_list_count_listing"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <SeekBar
                    android:id="@+id/seekBarMaxListCountListing"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewMaxListCountListing" />

                <AutoCompleteTextView
                    android:id="@+id/autoCmplTvListing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewMaxListCountListing"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:hint="@string/listing_hint" >
                </AutoCompleteTextView>

                <Button
                    android:id="@+id/buttonImportToPb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/autoCmplTvListing"
                    android:layout_centerVertical="true"
                    android:text="@string/import_to_phonebook" />

                <Button
                    android:id="@+id/buttonImportToCalllog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buttonImportToPb"
                    android:layout_centerVertical="true"
                    android:text="@string/import_to_calllogs" />
            </RelativeLayout>

            <Button
                android:id="@+id/buttonAbort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutPullvCardListing"
                android:text="@string/abort_btn" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>